# VenvBootstrapper

./: .gitignore  .vermin  HISTORY.md  README.md  generate_download_one_liner.ps1  pyproject.toml  run_tests.ps1
tests/: .copyright  .copyright_meta  COPYRIGHT.txt  LICENSE.txt  download_test.py  import_test.py
utilities/: .copyright  .copyright_meta  COPYRIGHT.txt  generate_download_one_liner.py
venvbootstrapper/: .copyright  .copyright_meta  COPYRIGHT.txt  LICENSE.txt  venvbootstrapper.py
